blocks: fixes title jump on channel hover

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -59,10 +59,10 @@ privacy-color-hover('.grid__block--channel .grid__block__inner--privacy-', color
 
 .grid__block__channel__stats
   visibility hidden
-  font-size s_caption
-  line-height 1
   font-weight normal
-  margin 1em 0 1em
+  line-height 1.3em
+  height 25px
+  margin 0
 
 .grid__block.grid__block--channel
   h2
@@ -78,7 +78,6 @@ privacy-color-hover('.grid__block--channel .grid__block__inner--privacy-', color
 
     .grid__block__channel__stats
       font-size 15px
-      line-height 1.2
       visibility visible
 
 .grid__block__content .valign-inner
@@ -140,9 +139,6 @@ privacy-color-hover('.grid__block--channel .grid__block__inner--privacy-', color
 .grid__block__inner:hover, .grid__block__inner.is-active
   border 1px solid bordergray
   cursor pointer
-
-.grid__block--channel .grid__block__inner:hover
-  border-width 2px
 
 .grid__block__inner:hover .grid__block__overlay
   opacity 1
